k8s/adventier-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adventier-BRANCHNAME

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adventier-BRANCHNAME-fun
  namespace: adventier-BRANCHNAME
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
    - host: www.BRANCHNAME.adventier.klucsik.fun
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: adventier-svc-fe
                port:
                  number: 80


---
#be
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adventier
  namespace: adventier-BRANCHNAME
spec:
  replicas: 1
  selector:
    matchLabels:
      type: app
      service: adventier
  template:
    metadata:
      labels:
        type: app
        service: adventier
    spec:
      nodeSelector:
        kubernetes.io/arch: "amd64"
      containers:
        - name: backend
          image: IMAGETAG
          imagePullPolicy: Always
          startupProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 5
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 5
            failureThreshold: 10
---

apiVersion: v1
kind: Service
metadata:
  name: adventier-svc-be
  namespace: adventier-BRANCHNAME
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    type: app
    service: adventier

---
